# whutfa

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build.yml
aa-handler/: CMakeLists.txt  LICENSE
aa-handler/src/: aasdk_runner.cpp  config.cpp  config.hpp  ipc_bridge.cpp  ipc_bridge.hpp  main.cpp  stub_handler.cpp  stub_handler.hpp
aa-handler/src/aa/: Session.cpp  Session.hpp
config/: 99-android-auto-headunit.rules  99-whutfa.rules  config.yaml
docs/: COMPATIBILITY.md  HARDWARE_TEST.md
frontend/: app.js  audio-worklet.js  av-sync.js  av-sync.test.js  h264.js  h264.test.js  index.html  style.css
scripts/: entrypoint.sh  generate-fixtures.js  install-host-usb.sh  preflight-usb.sh  test-ipc.sh
scripts/fixtures/: sample.h264
server/: package.json  tsconfig.json
server/src/: auth.test.ts  auth.ts  bridge-client.ts  config.ts  index.ts  ipc-framing.test.ts  ipc-framing.ts  status.ts  stream-buffer.ts  stub-feeder.ts  unix-socket.ts
server/test/integration/: stub-session.test.ts
